# founder_operating_dashboard

./: README.md  generate_demo_data.py  pyproject.toml
app/: __init__.py
app/analytics_agent/: analytics_agent.py  prompt.py  tools.py
app/routers/: chat.py  pages.py  tables.py
app/utils/: config.py  db.py  llm.py
static/css/: style.css
static/js/: script.js
templates/: index.html
